--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ empregos :
       - usa : Platane / snk @ master
         id : snake-gif
         com :
-          github_user_name : DouglasSoares-Economist-DataScientist
+          github_user_name : Douglas-Soares
           svg_out_path : dist / github-Contribution-grid-snake.svg
 
       - usa : crazy-max/ghaction-github-pages@v2.1.3
